feat:批量收藏 api docs; fix: auto input database
